# libanimation

./: .ci-libwobbly-analysis-options  .ci-libwobbly-coverage-options  .ci-libwobbly-sanitization-options  .gitmodules  .travis.yml  CMakeLists.txt  DEPENDENCIES  LICENSE  README.md  libwobbly.pc.in  meson.build
animation/: box_calculation.h  geometry.h  geometry_traits.h  math.h  meson.build  property.h  transform_calculation.h
animation-glib/: box.cpp  box.h  constructor-helpers.cpp  constructor-helpers.h  meson.build  vector.cpp  vector.h  vector4d-internal.h  vector4d.cpp  vector4d.h
animation-glib/bounce/: bounce.cpp  bounce.h  meson.build
animation-glib/glide/: glide.cpp  glide.h  meson.build
animation-glib/grid/: grid.cpp  grid.h  meson.build
animation-glib/magiclamp/: magiclamp.cpp  magiclamp.h  meson.build
animation-glib/stepper/: linear.cpp  linear.h  meson.build  reverse.cpp  reverse.h  stepper-holder.cpp  stepper-holder.h  stepper-wrapper.cpp  stepper-wrapper.h  stepper.cpp  stepper.h
animation-glib/transform/: meson.build  transform.cpp  transform.h
animation-glib/wobbly/: anchor.cpp  anchor.h  meson.build  model.cpp  model.h  vector.cpp  vector.h  wobbly-anchor-private.h
animation-glib/zoom/: meson.build  zoom.cpp  zoom.h
animation/bounce/: bounce.cpp  bounce.h  meson.build
animation/glide/: glide.cpp  glide.h  meson.build
animation/grid/: grid.h  meson.build
animation/magiclamp/: magiclamp.cpp  magiclamp.h  meson.build
animation/stepper/: linear.h  meson.build  reverse.h  stepper.h
animation/transform/: meson.build  transform.h
animation/wobbly/: emscripten.cpp  geometry.h  geometry_traits.h  meson.build  wobbly.cpp  wobbly.h  wobbly_concept_assert.h  wobbly_internal.h
animation/zoom/: meson.build  zoom.cpp  zoom.h
cmake/: cotire
debian/: changelog  control  copyright  gir1.2-animation-glib-0.install  gir1.2-libwobbly-glib-0.3.install  libanimation-dev.install  libanimation-glib-dev.install  libanimation-glib0.install  libanimation0.install  libwobbly-dev.install  libwobbly-glib-dev.install  libwobbly-glib0.install  libwobbly.install  libwobbly0.install  rules
include/: CMakeLists.txt  wobbly.h
include/smspillaz/wobbly/: wobbly.h
include/wobbly/: geometry.h  geometry_traits.h  wobbly.h
matchers/: CMakeLists.txt  mathematical_model_matcher.cpp  mathematical_model_matcher.h  meson.build  within_geometry_matcher.cpp  within_geometry_matcher.h
src/: CMakeLists.txt  boost_geometry.h  emscripten.cpp  wobbly.cpp  wobbly_concept_assert.h  wobbly_internal.h
tests/: CMakeLists.txt  anchor_test.cpp  constrainment_test.cpp  euler_integration_test.cpp  glib_api_test.cpp  glm_ostream_operators.h  mesh_interpolation_test.cpp  meson.build  model_test.cpp  ostream_point_operator.h  point_test.cpp  spring_test.cpp  wobbly.cpp  wobbly_test.cpp
tests/bounce/: bounce_animation_test.cpp
tests/glide/: glide_animation_test.cpp
tests/magiclamp/: magiclamp_animation_test.cpp
tests/wobbly/: anchor_test.cpp  constrainment_test.cpp  euler_integration_test.cpp  glib_api_test.cpp  mesh_interpolation_test.cpp  model_test.cpp  ostream_point_operator.h  point_test.cpp  spring_test.cpp
tests/zoom/: zoom_animation_test.cpp
wobbly/: CMakeLists.txt  emscripten.cpp  geometry.h  geometry_traits.h  meson.build  wobbly.cpp  wobbly.h  wobbly_concept_assert.h  wobbly_internal.h
wobbly-glib/: anchor.cpp  anchor.h  meson.build  model.cpp  model.h  vector.cpp  vector.h  wobbly-anchor-private.h
