# /animation/grid/meson.build
#
# Build the libanimation library (grid animation base class component).
#
# See /LICENCE.md for Copyright information.

grid_headers = files([
  'grid.h'
])

animation_headers += grid_headers

install_headers(grid_headers, subdir: join_paths(animation_headers_subdir, 'grid'))
